// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"Program":"cmd","Window":"ahk_exe cmd.exe","option":"ActivateOrOpen"}}, then matches snapshot 1`] = `
"^!a::ActivateOrOpen(\\"ahk_exe cmd.exe\\", \\"cmd\\")


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"Program":"http://dictionary.reference.com/","Window":"dictionary.com","option":"ActivateOrOpenChrome"}}, then matches snapshot 1`] = `
"^!a::ActivateOrOpenChrome(\\"dictionary.com\\", \\"http://dictionary.reference.com/\\")


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"Custom","Code":"\\n            Send, ^c\\n            Sleep 50\\n            Run, http://www.google.com/search?q=%clipboard%\\n            Return"}}, then matches snapshot 1`] = `
"^!a::
            Send, ^c
            Sleep 50
            Run, http://www.google.com/search?q=%clipboard%
            Return


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"LockWorkStation"}}, then matches snapshot 1`] = `
"^!a::LockWorkStation()


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"OpenConfig"}}, then matches snapshot 1`] = `
"^!a::OpenConfig()


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"Replace","input":"b"}}, then matches snapshot 1`] = `
"^!a::send, b


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"Send","input":"b"}}, then matches snapshot 1`] = `
"^!a::send, b


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"SendUnicodeChar","input":"0x2192"}}, then matches snapshot 1`] = `
"^!a::SendUnicodeChar(0x2192)


"
`;

exports[`when keygen given {"0":{"func":"KEY","skeyValue":"a","modifiers[]":["CTRL","ALT"],"option":"TurnMonitorsOff"}}, then matches snapshot 1`] = `
"^!a::TurnMonitorsOff()


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","Program":"cmd","Window":"ahk_exe cmd.exe","option":"ActivateOrOpen"}}, then matches snapshot 1`] = `
":*c:;implies::
ActivateOrOpen(\\"ahk_exe cmd.exe\\", \\"cmd\\")
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","Program":"http://dictionary.reference.com/","Window":"dictionary.com","option":"ActivateOrOpenChrome"}}, then matches snapshot 1`] = `
":*c:;implies::
ActivateOrOpenChrome(\\"dictionary.com\\", \\"http://dictionary.reference.com/\\")
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"Custom","Code":"\\n            Send, ^c\\n            Sleep 50\\n            Run, http://www.google.com/search?q=%clipboard%\\n            Return"}}, then matches snapshot 1`] = `
":*c:;implies::
            Send, ^c
            Sleep 50
            Run, http://www.google.com/search?q=%clipboard%
            Return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"LockWorkStation"}}, then matches snapshot 1`] = `
":*c:;implies::
LockWorkStation()
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"OpenConfig"}}, then matches snapshot 1`] = `
":*c:;implies::
OpenConfig()
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"Replace","input":"b"}}, then matches snapshot 1`] = `
":*c:;implies::b


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"Send","input":"b"}}, then matches snapshot 1`] = `
":*c:;implies::
send, b
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"SendUnicodeChar","input":"0x2192"}}, then matches snapshot 1`] = `
":*c:;implies::
SendUnicodeChar(0x2192)
return


"
`;

exports[`when keygen given {"0":{"func":"STRING","skeyValue":";implies","option":"TurnMonitorsOff"}}, then matches snapshot 1`] = `
":*c:;implies::
TurnMonitorsOff()
return


"
`;
